<resources>
    <string name="app_name">GitGit</string>
    <string name="main_repository">Repositories</string>
    <string name="main_userId">User-Id</string>
    <string name="main_follower">Follwer</string>
    <string name="main_following">Follwing</string>
    <string name="main_calendar">Calendar</string>
    <string name="main_block_image">block image</string>
    <string name="main_location">Location</string>
    <string name="main_repository_des">Repository</string>
    <string name="main_show_on_github">Show on Github!</string>
    <string name="main_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_home">홈</string>
    <string name="item_search">검색</string>
    <string name="item_favorite">즐겨찾기</string>
</resources>